--- a/.github/workflows/release_modules.yml
+++ b/.github/workflows/release_modules.yml
@@ -35,6 +35,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Get version.txt
+        uses: actions/download-artifact@v2
+        with:
+          name: gitversion
+      - name: Create new file without newline char from version.txt
+        run: tr -d '\n' < version.txt > version1.txt
+      - name: Read version
+        id: version
+        uses: juliangruber/read-file-action@v1.0.0
+        with:
+          path: version1.txt
       - name: Set up Python 3.x
         uses: actions/setup-python@v2
         with:
