--- a/.github/workflows/release_modules.yml
+++ b/.github/workflows/release_modules.yml
@@ -49,14 +49,15 @@ jobs:
       - name: Set up Python 3.x
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
-          architecture: 'x64'
-      - name: Run minifier command
-        run: python -c 'import json, sys;json.dump(json.load(sys.stdin), sys.stdout)' < example/Example.json > example/Example.txt
-      - name: Create a Release in GitHub
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: "example/Example.txt"
-          token: ${{ secrets.GH_TOKEN }}
-          tag: ${{ steps.version.outputs.content }}
-          commit: ${{ github.sha }}
+          python-version: "3.x"
+          architecture: "x64"
+      # TODO: Uncomment the followind steps to generate the minified module and release it on github
+      # - name: Run minifier command
+      #   run: python -c 'import json, sys;json.dump(json.load(sys.stdin), sys.stdout)' < example/Example.json > example/Example.txt
+      # - name: Create a Release in GitHub
+      #   uses: ncipollo/release-action@v1
+      #   with:
+      #     artifacts: "example/Example.txt"
+      #     token: ${{ secrets.GH_TOKEN }}
+      #     tag: ${{ steps.version.outputs.content }}
+      #     commit: ${{ github.sha }}
